# DotDot

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Folder.DotSettings  README.md  alacritty.yml  config.yml  emacs.yml  gnupg.yml  gradle.yml  i3wm.yml  maven.yml  ocaml.yml  pip.yml  plasma.yml  ssh.yml  stack.yml  typora.yml  vscode-oss.yml  yay.yml  zsh.yml
dotdot/: CMakeLists.txt  clipp.h  dotdot.cpp  dotdot.h  files.hpp  llstring.hpp  rule.hpp  util.hpp  working.hpp
dotdot/yaml-cpp-0.6.3/: CMakeLists.txt
rules/: VsCode.yml  aria2.yml  bower.yml  bundle.yml  fish.yml  fonts.yml  gem.yml  ghc.yml  git.yml  gradle.yml  gtk3.yml  npm.yml  nuget.yml  pam_environment.yml  sbt.yml  spacevim.yml  ssh.yml  vscode.yml  zeal.yml
src/: files.rs  helper.rs  lib.rs  logger.rs  main.rs  opt.rs  rule.rs
tests/: test.rs
