[package]
name = "dotdot"
version = "0.1.0"
authors = ["iov <billow.fun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4",features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
clap = "2"
serde_yaml = "0.8"
dirs = "2.0"
